Check canister balance

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,8 @@ chrono = "0.4.31"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
 dotenv = "0.15.0"
+
+ic-agent = "0.30.2"
+ic-utils = "0.30.2"
+ring = "0.16.20"
+num-bigint = "0.4.2"
