--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ clokwerk = "0.4.0"
 chrono = "0.4.31"
 
 tracing = "0.1"
-tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.5", features = ["env-filter", "json"] }
 dotenv = "0.15.0"
 
 ic-agent = "0.30.2"
